--- a/style.css
+++ b/style.css
@@ -1,84 +1,22 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    font-weight: normal
-}
-
-.box-1{
-    background-color: black;
-    color: brown;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
 .container{
-    width: 80%;
-    margin: auto; 
-    
-    border-right: 5px black;
-    border-left: 5px black;
-    border-bottom: 10px green;
-    border-top: 10px green;
-    border-width: 3px;
-    border-bottom-width: 10px;
-    border-top-style: outset;
-    text-decoration: underline;
-}
-.container-2{
-    width: 80%;
+    width: 100%;
     margin: auto;
 }
+.nav-1{
+    
+}
+.nav-2{
+}
+.nav-3{
+}
+.nav-4{
+}
+.nav-5{
+    width: 28px;
+    height: 28px;
+}
 
-.my-form{
-    padding: 20px;
-}
-.my-form label{
-    display: block;
-}
-.my-form input[type="text"]{
-    padding: 8px;
-}
-.my-form textarea{
-    width: 100%;
-}
-.my-form input[type="submit"]{
-    background-color: darkgray;
-}
-.button:hover{
-    background: orangered;
-    color: orangered;
-}
-.p-box{
-    width:800px;
-    height:500px;
-    border:1px solid wheat;
-    margin-top:30px; 
-    position: relative;
-    background-image: url(../btproject/assets/advanced\ layout.jpg);
-}
-.p-box h1{
-    position: absolute;
-    top: 100px;
-    left: 200px;
-}
-.fix-me{
-    position: fixed;
-    top: 300px;
-}
-#main-footer{
-    background: black;
-    color: wheat;
-    text-align: center;
-    padding: 20px;
-    margin-top: 40px;
-}
-.tab-1{
-     background-color: gray;
-}
-.slab-1{
-    color: wheat;
-}
-#map{
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
+.nav-5 img {
+    width: 28px;
+    height: 28px;
 }
